creating form for person and address

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,9 +4,15 @@
       <%= form.text_field :name %>
     </div>
     <div>
-    <%= form.label :color %>
-    <%= form.text_field :color %>
-  </div>
+      <%= form.label :color %>
+      <%= form.text_field :color %>
+    </div>
+    
+
+ 
+     <%= form.date_select :birth_date %>
+  
+
 
     <div>
       <%= form.submit %>
