--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,9 @@
 <h1> <%= @product.name %></h1>
 
 
-<% link_to "Back", products_path %> 
-<%= link_to "Edit", edit_product_path(@product) %>
+<%= link_to "Back", products_path %> <br>
 
+<%= link_to "Edit", edit_product_path(@product) %>
 <%= button_to "Delete", @product, method: :delete, data: { turbo_confirm: "Are you sure?" } %>
+
+
